fixed the border-radius of the videoInput on mobile

--- a/scss/components/_videoInput.scss
+++ b/scss/components/_videoInput.scss
@@ -72,6 +72,7 @@
   }
 
   video {
+    border-radius: 16px;
     pointer-events: none;
     position: absolute;
     height: 100%;
